fix - audits fixies

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="React Gravatar Demo">
+    <meta property="og:description" content="A React Gravatar Demo..">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Gravatar Demo</title>
   </head>
